--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
+    "@truffle/hdwallet-provider": "^2.0.3",
     "@typechain/truffle-v5": "^2.0.0",
     "@types/bn.js": "^4.11.6",
     "@types/chai": "^4.2.11",
